# cudakernel

./: README.md  meson.build  setupenv.bat
kernels/: invert.cu  invert.ptx  kernels.cu  kernels.ptx
src/: gstcudakernel.c
src/config/: config.h
